# Polyrifringence-App

./: CANON_MAP.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_UNIFIED_SUITE.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: gem_registry.json
scripts/: run_local.ps1  run_local.sh
src/poly_engine/: __init__.py  analysis_toolkit.py  core_engine.py  documentation_generator.py  educational.py  gem_registry.py  visualization.py
tests/: test_gem_registry.py  test_imports.py
